   allow reading these without loading the model. Removed def.model.{name,type,path}
   so they aren't used accidentally.
 ! Changed the order of AllowStartPosition parameters and added a new one:
   Old: clampedX, clampedY, clampedZ, playerID, readyState, rawX, rawY, rawZ
   New: playerID, teamID, readyState, clampedX, clampedY, clampedZ, rawX, rawY, rawZ
 - Add VFS.AbortDownload(id) - returns whether the download was found&removed from the queue
 - Add Spring.Get{Game,Menu}Name to LuaUnsyncedRead, so LuaMenu and unsynced Lua handles know about each other
 - Add new callins (LuaMenu only):
   ActivateMenu() that is called whenever LuaMenu is on with no game loaded.
   ActivateGame() that is called whenever LuaMenu is on with a game loaded.
   AllowDraw() if it returns false, the next draw call is skipped (only active when a game isn't running)
 - Add Spring.{Set,Get}VideoCapturingMode() - this doesn't actually record the game in any way,
   it just regulates the framerate and interpolations.
 - Add DrawScreenPost(vsx, vsy) unsynced callin. It's used to alter content of the frame after it's been completely rendered (i.e. World, MiniMap, Menu, UI).
   Basically the frame you would get if you /screenshot it. Use it similarly to DrawScreenEffects (by ivand)
 - Add LuaConstPlatform that exposes the Platform table with following keys:
    Platform.gpu: string, full GPU device name
    Platform.gpuVendor: string, one of "Nvidia", "Intel", "ATI", "Mesa", "Unknown"
    Platform.gpuMemorySize: number, size of total GPU memory in MBs; only available for "Nvidia", (rest are 0)
    Platform.glVersionShort: string, major.minor.buildNumber
    Platform.glslVersionShort: string, major.minor
    Platform.glVersion: string, full version
    Platform.glVendor: string
    Platform.glRenderer: string
    Platform.glslVersion: string, full version
    Platform.glewVersion: string
    Platform.sdlVersionCompiledMajor: number
    Platform.sdlVersionCompiledMinor: number